<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GroupMood</string>
    <string name="scan">QR-Code scannen</string>
    <string name="history">Letztes Meeting öffnen</string>
    <string name="comment">Kommentar hinzufügen</string>
    <string name="comment_hint">Dein Kommentar …</string>
    <string name="loading_meeting">Lade Daten des Meetings …</string>
    <string name="loading_comments">Lade Kommentare …</string>
    <string name="no_comments">Keine Kommentare vorhanden.</string>
    <string name="check_meeting">Prüfe Meeting …</string>
    <string name="intro">Willkommen bei <b>GroupMood</b>.\nZum Starten der Anwendung, scanne bitte den QR-Code des Meetings.</string>
    <string name="toast_no_scan">Es wurde nichts gescannt.</string>
    <string name="toast_no_groupmood_qrcode">Ups! Du hast keinen GroupMood-QR-Code gescannt.</string>
    <string name="question_action_answer">Frage beantworten</string>
    <string name="question_your_answer">Deine Antwort:</string>
    <string name="question_answered">Antwort gespeichert: %s</string>
    <string name="question_total">von %d</string>
    <string name="label_result_avg">Ergebnis: %d</string>
    <string name="wifi_warning"><b>Kein WLAN verfügbar.</b>\nGroupMood wurde für die Verwendung mit WLAN entwickelt und wird lange brauchen, um Daten vom Server zu laden.</string>
    <string name="fotovote_create">FotoVote erstellen</string>
    <string name="fotovote_photo">Foto</string>
    <string name="fotovote_photo_capture">Foto aufnehmen</string>
    <string name="fotovote_photo_select">Aus Album auswählen</string>
    <string name="meeting_name">Name des Meetings</string>
    <string name="meeting_name_hint">Was wollen wir Essen?</string>
    <string name="groupmood_server">Server</string>
    <string name="groupmood_server_info">Die URL des GroupMood-Servers auf dem dieses Meeting erstellt werden soll.</string>
    <string name="groupmood_server_hint">http://groupmood.net:8000</string>
    <string name="fotovote_photo_preview">Foto</string>
    <string name="fotovote_photo_info">Die ist das erste Foto für die Abstimmung. Anschließend können weitere Fotos hinzugefügt werden.</string>
    <string name="capture_storage_error">Konnte Verzeichnis für Foto-Dateien nicht anlegen.</string>
    <string name="creating_meeting">Lege Meeting an …</string>
    <string name="creating_topic">Lege Thema an …</string>
    <string name="topic_create">Thema anlegen</string>
    <string name="fotovote_createtopic">Foto anlegen</string>
    <string name="no_questions">Keine Fragen hinterlegt.</string>
    <string name="share_meeting">Zum Meeting einladen …</string>
    <string name="share_meeting_text">Ich nehme gerade an diesem Meeting teil: %s.</string>

    <plurals name="label_result_numvotes">
        <item quantity="one">1 Stimme</item>
        <item quantity="other">%d Stimmen</item>
    </plurals>

</resources>